--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <h1>Prudhvi's portfolio</h1>
     <h2>I'm a web developer</h2>
     <hr>
-    <a href="./public/movie-ranking.html">Movie Ranking</a>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking</a></h3>
+
     <img  src="./assets/images/Prudhvi's movies.png" height="200" alt="Prudhvi's movies" />
-    <a href="./public/birthday-invite.html">Birthday</a>
+
+    <h3><a href="./public/birthday-invite.html">Birthday</a></h3>
     <img src = "assets/images/Birthday-page.png" height="200" alt="Sample Birthday" />
+    <hr/>
     <a href = "./public/contact.html">Contact Me</a>
     <a href = "public/about.html">About Me</a>
 
